# vcsh-xmonad

./: brightness.c  brightness.py  passmenu  stack.yaml  xmonad-idolf.cabal
src/: xmonad.hs
src/XMonad/Actions/: DynamicWorkspacesExtra.hs
src/XMonad/Hooks/: UrgencyExtra.hs
