name:                xmonad-idolf
version:             0.1
synopsis:            My xmonad.
description:         My xmonad configuration
homepage:            http://github.com/githubuser/myxmonad#readme
license:             BSD3
license-file:        LICENSE
author:              Mathias Svensson
maintainer:          freaken@freaken.dk
category:            Desktop
build-type:          Simple
cabal-version:       >=1.10

Executable xmonad
  Ghc-options:         -threaded -O2
  hs-source-dirs:      src
  main-is:             xmonad.hs
  other-modules:       XMonad.Actions.DynamicWorkspacesExtra
                     , XMonad.Hooks.UrgencyExtra
                     , XMonad.Layout.TopicExtra
                     , XMonad.Layout.WorkspaceDirAlt
                     , XMonad.Util.ScratchpadAlt
  default-language:    Haskell2010
  build-depends:       base  >= 4 && <5
                     , xmonad
                     , xmonad-contrib
                     , regex-pcre
                     , directory
                     , containers
                     , old-locale
                     , old-time
                     , process
                     , filepath
                     , data-default
